fixed responsivity on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ h2 {
 }
 .blog-detail #blog-image {
   margin: 10px 0px;
-  max-width: 700px;
+  max-width: 100%;
 }
 .blog-detail #blog-title {
   font-size: 25px;
@@ -414,7 +414,9 @@ padding: 5px 10px;
 @media (min-width: 413px) and (max-width: 768px) { 
   body {
     margin: 5px
+    
   }
+
 }
 @media screen and (max-width: 412px) {
   body {
@@ -447,4 +449,20 @@ padding: 5px 10px;
   .links {
     margin-right: 5px;
   }
+  .blog-preview img {
+    width: 100%;
+  }
+  .blog-preview #body {
+    text-align: justify;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .authors {
+    display: block;
+  }
+  .login h2 {
+    margin: 15px;
+    margin-bottom: 20px;
+  }
+
 }
